Prevent field controls overlapping when label is empty

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1747,6 +1747,10 @@ a.frm_hidden,
 	line-height: var(--leading);
 }
 
+#frm_form_editor_container #frm-show-fields .frm_primary_label {
+	min-height: 21px;
+}
+
 .frm-fields td input + label {
 	display: inline;
 }
