Clean up the email code modal steps We didn't have a design for this, so I went ahead and made a few updates while updating the text. Switch back to using "Add New" on the form listing page Update the renew modal

--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -410,7 +410,7 @@
 	color: var(--grey-900);
 }
 
-#frm-upgrade-modal .frm-upgrade-modal-lock-icon {
+.frm-upgrade-modal-lock-icon {
 	display: flex;
 	justify-content: center;
 	align-items: center;
