Use top instead, only offset when frm_updated_message is also in page

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -6692,8 +6692,8 @@ tr.frm_options_heading td {
 	top: 0;
 }
 
-.frm-empty-fields .frm_no_fields {
-	margin-top: 83px
+.frm-empty-fields .frm_updated_message ~ .frm_no_fields {
+	top: 60px;
 }
 
 .frm-has-fields .frm_no_fields {
