--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -8738,6 +8738,13 @@ Responsive Design
 	#wp-content-media-buttons a.frm_insert_form {
 		padding: 0 var(--gap-sm);
 	}
+
+	.frm-white-body input[type="checkbox"]:checked::before,
+	.frm_wrap input[type="checkbox"]:checked::before {
+		width: 1.2rem;
+		height: 1.2rem;
+		margin: 0.125rem;
+	}
 }
 
 @media only screen and (max-width: 700px) {
