--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -4451,11 +4451,6 @@ li.frm_field_box > ul.frm_grid_container {
 	--border-radius: var(--small-radius);
 }
 
-.frm_image_option_container svg {
-	height: 50px;
-	margin: 10px auto 0;
-}
-
 #form_show_entry_page .frm_file_link,
 #form_show_entry_page .frm_image_option_container {
 	display: inline-flex;
@@ -4530,6 +4525,12 @@ li.frm_field_box > ul.frm_grid_container {
 #frm-welcome .frm_image_option_container svg,
 #form_global_settings .frm_image_option_container svg {
 	max-width: calc( 100% - 20px );
+}
+
+/* Style image option container for Directory add on. */
+#frm-new-template .frm_image_option_container svg {
+	height: 50px;
+	margin: 10px auto 0;
 }
 
 /* Show an icon on top */
